force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__CaseMilestone_CaseId_map_Case_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseMilestone_CaseId_map_Case_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseMilestone_CaseId_map_Case_Id_N_1</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>CaseMilestone_CaseId_map_Case_Id_N_1</relationshipLabel>
    <relationshipName>CaseMilestone_CaseId_map_Case_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>