force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__CaseMilestoneTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseMilestoneTypeId__c</fullName>
    <label>Case Milestone Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseMilestoneTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>