force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__ElapsedTimeInDays__c.field-meta.xml
<CustomField>
    <fullName>ssot__ElapsedTimeInDays__c</fullName>
    <label>Elapsed Time In Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ElapsedTimeInDays</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>