force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completed</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCompleted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>