force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__IsViolated__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsViolated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Violated</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsViolated</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>