force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__rel_1725593376762_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1725593376762_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseMilestone_CaseMilestoneTypeId_ma_rel</label>
    <referenceTo>ssot__CaseMilestoneType__dlm</referenceTo>
    <relationshipLabel>CaseMilestone_CaseMilestoneTypeId_ma_rel</relationshipLabel>
    <relationshipName>rel_1725593376762_end</relationshipName>
    <type>Lookup</type>
</CustomField>