force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__rel_1725593389209_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1725593389209_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseMilestone_OperatingHoursId_map_O_rel</label>
    <referenceTo>ssot__OperatingHours__dlm</referenceTo>
    <relationshipLabel>CaseMilestone_OperatingHoursId_map_O_rel</relationshipLabel>
    <relationshipName>rel_1725593389209_end</relationshipName>
    <type>Lookup</type>
</CustomField>