force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__rel_1725593402276_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1725593402276_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseMilestone_CreatedById_map_User_I_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>CaseMilestone_CreatedById_map_User_I_rel</relationshipLabel>
    <relationshipName>rel_1725593402276_end</relationshipName>
    <type>Lookup</type>
</CustomField>