force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__StoppedTimeInDays__c.field-meta.xml
<CustomField>
    <fullName>ssot__StoppedTimeInDays__c</fullName>
    <label>Stopped Time In Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StoppedTimeInDays</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>