force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__StoppedTimeInHours__c.field-meta.xml
<CustomField>
    <fullName>ssot__StoppedTimeInHours__c</fullName>
    <label>Stopped Time In Hours</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StoppedTimeInHours</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>