force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__StoppedTimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__StoppedTimeInMinutes__c</fullName>
    <label>Stopped Time In Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StoppedTimeInMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>