force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TargetDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetDateTime__c</fullName>
    <label>Target Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>