force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TargetResponseInHours__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetResponseInHours__c</fullName>
    <label>Target Response In Hours</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetResponseInHours</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>