force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeRemainingInDays__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeRemainingInDays__c</fullName>
    <label>Time Remaining In Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeRemainingInDays</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>