force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeRemainingInHours__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeRemainingInHours__c</fullName>
    <label>[DoNotUse]Time Remaining In Hours</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeRemainingInHours</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>