force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeRemainingInHoursText__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeRemainingInHoursText__c</fullName>
    <label>[DoNotUse]Time Remaining In Hour</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeRemainingInHoursText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>