force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeRemainingInMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeRemainingInMinutes__c</fullName>
    <label>[DoNotUse]Time Remaining In Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeRemainingInMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>