force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeRmnInHoursText__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeRmnInHoursText__c</fullName>
    <label>Time Remaining In Hours</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeRmnInHoursText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>