force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeSinceTargetInDays__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeSinceTargetInDays__c</fullName>
    <label>Time Since Target In Days</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeSinceTargetInDays</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>