force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeSinceTargetInHours__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeSinceTargetInHours__c</fullName>
    <label>[DoNotUse]Time Since Target In Hours</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeSinceTargetInHours</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>