force-app/main/default/objects/ssot__CaseMilestone__dlm/fields/ssot__TimeSinceTargetInMinutesText__c.field-meta.xml
<CustomField>
    <fullName>ssot__TimeSinceTargetInMinutesText__c</fullName>
    <label>Time Since Target In Minutes</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TimeSinceTargetInMinutesText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>